<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_of_the_field">Description of the field</string>
    <string name="discribe_how_hard_to_learn_this_info">Describe how hard to learn this info</string>
    <string name="use">Describe how you can use this info</string>
    <string name="repeat_again">Repeat again</string>
    <string name="exit">Exit</string>
    <string name="test_rule">Test rule:</string>
    <string name="start">START</string>
    <string name="create_new_card">CREATE NEW CARD</string>
    <string name="no_card_was_created">No card was created for this theme \nCreate new card to start</string>
    <string name="create_btn_text">Create</string>
    <string name="skip_description">Skip description ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="restart">RESTART</string>
    <string name="card_end_text">You have done a good job \nLearning cards is ended</string>
    <string name="tile_ended">Your time is end</string>
    <string name="description">Description</string>
    <string name="record">record</string>
    <string name="play_sound_assosiation">Play sound assosiation</string>
</resources>